Fixed dialog z-index

--- a/assets/css/popup/misc.less
+++ b/assets/css/popup/misc.less
@@ -84,7 +84,7 @@ a.button {
 #dialog {
   position: fixed;
   background: rgba(0,0,0,0.5);
-  z-index: 1;
+  z-index: 999;
 
   height: 100%;
   width: 100%;
